pulldown-cmark-mdcat/tests/snapshots/render/ansi@samples-tasklist.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/samples/tasklist.md
---
• ☑ foo

  • ☐ bar
  • ☑ baz

• ☐ test

  • ☐ test1
  • ☐ test2
