pulldown-cmark-mdcat/tests/snapshots/render/ansi@wrapping-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/wrapping/lists.md
---
• mdcat now fills paragraph text to the column limit, i.e. fills up short
  lines and wraps long lines (see [GH-4]).
• mdcat now allows to control color and style via a new[33m theme[0m field in
  [33mpulldown_cmark_mdcat::Settings[0m of type[33m pulldown_cmark_mdcat::Theme[0m (see [GH-48
  ]).
