pulldown-cmark-mdcat/tests/snapshots/render/ansi@wrapping-simple.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/wrapping/simple.md
---
[33mmdcat[0m has some stuff which seriously goes over the[1m 80 character[0m mark here and
definitely must wrap right before the "definitely" but we can go on even more!
But we can also require that mdcat joins long lines.
